// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Field Test Test date picker field with default value property 1`] = `
<input
  name="birthday"
  onChange={[Function]}
  type="date"
  value="1996-07-26"
/>
`;

exports[`Password Field Test Test date picker field with onChange function 1`] = `
<input
  name="birthday"
  onChange={[Function]}
  type="date"
  value=""
/>
`;

exports[`Password Field Test Test natural date picker field 1`] = `
<input
  name="birthday"
  onChange={[Function]}
  type="date"
  value=""
/>
`;
